# stm32-imu

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  openocd.cfg
cmake/: toolchain-cortex_m4.cmake~  toolchain-gcc-cortex-m4.cmake
src/: CMakeLists.txt
src/application/inc/: gps.h  imu.h  imu_defs.h  led.h  position.h
src/application/src/: gps.c  imu.c  init.c  led.c
src/drivers/inc/: l3gd20.h  log.h  lsm303dlhc.h  minmea.h  mpu6050.h  qmc5883l.h
src/drivers/src/: i2c_tools.c  l3gd20.c  log.c  lsm303dlhc.c  minmea.c  mpu6050.c  qmc5883l.c
src/os/inc/: os_port.h
src/stm32f401/: CMakeLists.txt  STM32F401CCUx_FLASH.ld  copy.sh
src/stm32f401/startup/inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
src/stm32f401/startup/src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32cubemx/: stm32cubemx.ioc
tests/: test_angles.py
tests/.mypy_cache/3.10/: _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _ctypes.data.json  _ctypes.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  enum.data.json  enum.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  math.data.json  math.meta.json  mmap.data.json  mmap.meta.json  pathlib.data.json  pathlib.meta.json  pickle.data.json  pickle.meta.json  posixpath.data.json  posixpath.meta.json  re.data.json  re.meta.json  sre_compile.data.json  sre_compile.meta.json  sre_constants.data.json  sre_constants.meta.json  (+14 more)
tests/.mypy_cache/3.10/_typeshed/: __init__.data.json  __init__.meta.json
tests/.mypy_cache/3.10/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
tests/.mypy_cache/3.10/ctypes/: __init__.data.json  __init__.meta.json
tests/.mypy_cache/3.10/email/: __init__.data.json  __init__.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
tests/.mypy_cache/3.10/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  (+2 more)
(+8 files in other folders)
